--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             </div>
         </div>
     </div>
+    <div id="weather-container">
+        <div id="current-weather">
+            <h1 id="location">London</h1>
+            <p id="temperature">Loading...</p>
+            <p id="description">Loading weather details...</p>
+            <div id="icon-container">
+                <img id="weather-icon" alt="Weather Icon" />
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
