--- a/index.html
+++ b/index.html
@@ -14,12 +14,7 @@
             <p id="description">Loading weather details...</p>
             <div id="icon-container">
                 <img id="weather-icon" alt="Weather Icon" />
-            </div>
-        </div>
-    </div>
-    <div id="weather-container">
-        <div id="current-weather">
-            <h1 id="location">London</h1>
+                <h1 id="location">Stockholm</h1>
             <p id="temperature">Loading...</p>
             <p id="description">Loading weather details...</p>
             <div id="icon-container">
