--- a/index.html
+++ b/index.html
@@ -8,26 +8,13 @@
 </head>
 <body>
     <div id="weather-dashboard">
-        <!-- Weather boxes -->
-        <div class="weather-box" data-location="Tallinn">
-            <h2 class="location">Tallinn</h2>
-            <p class="temperature">Loading...</p>
-            <p class="description">Loading weather details...</p>
-            <img class="weather-icon" alt="Weather Icon" />
-        </div>
-        <div class="weather-box" data-location="Tartu">
-            <h2 class="location">Tartu</h2>
-            <p class="temperature">Loading...</p>
-            <p class="description">Loading weather details...</p>
-            <img class="weather-icon" alt="Weather Icon" />
-        </div>
         <div class="weather-box" data-location="Viljandi">
             <h2 class="location">Viljandi</h2>
             <p class="temperature">Loading...</p>
             <p class="description">Loading weather details...</p>
             <img class="weather-icon" alt="Weather Icon" />
         </div>
-        <div class="weather-box" data-location="Shiloh PA">
+        <div class="weather-box" data-location="Shiloh, PA">
             <h2 class="location">Shiloh, PA</h2>
             <p class="temperature">Loading...</p>
             <p class="description">Loading weather details...</p>
