--- a/index.html
+++ b/index.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="weather-dashboard">
-        <div class="weather-box" data-location="Viljandi">
-            <h2 class="location">Viljandi</h2>
+        <div class="weather-box" data-location="Tallinn">
+            <h2 class="location">Tallinn</h2>
             <p class="temperature">Loading...</p>
             <p class="description">Loading weather details...</p>
-            <img class="weather-icon" alt="Weather Icon" />
         </div>
         <div class="weather-box" data-location="Shiloh, PA">
             <h2 class="location">Shiloh, PA</h2>
             <p class="temperature">Loading...</p>
             <p class="description">Loading weather details...</p>
-            <img class="weather-icon" alt="Weather Icon" />
         </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
- 
