--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,11 +13,13 @@
             <h2 class="location">Tallinn</h2>
             <p class="temperature">Loading...</p>
             <p class="description">Loading weather details...</p>
+            <p class="wind-speed">Loading wind...</p>
         </div>
         <div class="weather-box" data-location="Shiloh, PA">
             <h2 class="location">Shiloh, PA</h2>
             <p class="temperature">Loading...</p>
             <p class="description">Loading weather details...</p>
+            <p class="wind-speed">Loading wind...</p>
         </div>
     </div>
     <script src="script.js"></script>
