--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,17 +9,17 @@
 </head>
 <body>
     <div id="weather-dashboard">
-        <div class="weather-box" data-location="Tallinn">
-            <h2 class="location">Tallinn</h2>
+        <div class="weather-box" data-location="Viljandi">
+            <h2 class="location">Viljandi</h2>
             <p class="temperature">Loading...</p>
             <p class="description">Loading weather details...</p>
-            <p class="wind-speed">Loading wind...</p>
+            <p class="local-time">Loading time...</p>
         </div>
         <div class="weather-box" data-location="Shiloh, PA">
             <h2 class="location">Shiloh, PA</h2>
             <p class="temperature">Loading...</p>
             <p class="description">Loading weather details...</p>
-            <p class="wind-speed">Loading wind...</p>
+            <p class="local-time">Loading time...</p>
         </div>
     </div>
     <script src="script.js"></script>
